--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Candidate Experience Survey DEMO2 (copy)</title>
+    <title>Typeform | Lewagon</title>
     <style type="text/css">
       html {
         margin: 0;
